# dawaBack/dawa_back/src/api/Services/login_service.py
@@ -1,0 +1,37 @@
+from calendar import prcal
+
+from flask import request
+from flask_restful import Resource
+
+from ..Components.login_component import LoginComponent
+from ..model.request.login_request import LoginRequest
+from ...utils.general.logs import HandleLogs
+from ...utils.general.response import response_error, response_success
+
+
+class LoginService(Resource):
+    @staticmethod
+    def post():
+        try:
+            HandleLogs.write_log("Ejecutando servicio de Login")
+            # Obtener el request
+            rq_json = request.get_json()
+            # Validar ese request sea compatible con el modelo
+            new_request = LoginRequest()
+            error_en_validacion = new_request.validate(rq_json)
+            if error_en_validacion:
+                HandleLogs.write_error("Error al validar el request -> " + str(error_en_validacion))
+                return response_error("Error al validar el request -> " + str(error_en_validacion))
+
+            resultado = LoginComponent.Login(rq_json['login_user'], rq_json['login_password'])
+            if resultado['result']:
+                return response_success("Login Exitoso")
+            else:
+                return response_error(resultado['message'])
+
+        except Exception as err:
+            HandleLogs.write_error(err)
+            return response_error("Error en el método: " + err.__str__())
+
+
+
